--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,21 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.card-items {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ /* align-items: center; */
+
+ 
+}
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
 .App-link {
   color: #61dafb;
